--- a/sport.html
+++ b/sport.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>스포츠 테이핑</title>
+    <title>TAPING ILLUSTRATED BOOK</title>
   </head>
   <body>
-    <p><h1><a href="first web.html"> TAPING ILLUSTRATED BOOK</h1></p>
+    <p><h1><a href="index.html"> TAPING ILLUSTRATED BOOK</h1></p>
 
     <p><a href="축구.html"><img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAxMTBfNzIg%2FMDAxNjEwMjUyNjMzMjMx.6u9y6yRTMsoJcX1SDEcVhlquiJmqOAYs_u6m8jYF1tEg.3gwVAeigXDY7y3eI_8XZOhaq-ms8NocgjAlTOUrJMSUg.JPEG.blueskyever%2F_HE26611Thumb.jpg&type=a340" width="400"></p>
     <p><a href="농구.html"><img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20160509_186%2Fxzizazhz2_1462785302190n1Cp7_JPEG%2Fh.jpg&type=a340" width="400" height="300"></p>
